# vsq_parse

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  vsqconstructor.cpp  vsqconstructor.h
cl_factory/: allitemfactory.h  allitemsregistrator.h  visualproject.cpp  visualproject.h  vsqitem.h  vsqitemfactory.h  vsqitemsregistrator.h
cl_factory/vsq_classes/: emptyitem.cpp  emptyitem.h  visualproject.cpp  visualproject.h
xml_files/: prel.rpp  sample.fr3  sample.xml  simple.xml
xml_procs/: xmlreader.h
